--- a/OBE.html
+++ b/OBE.html
@@ -352,8 +352,7 @@ window.random = function(min, max) {
 
 
 
-</tw-passagedata><tw-passagedata pid="8" name="ToDoList" tags="" position="100,25" size="100,100">- Launch level based on task duration 
-- Add check that score is positive to display close button
+</tw-passagedata><tw-passagedata pid="8" name="ToDoList" tags="" position="100,25" size="100,100">- Add check that score is positive to display close button
 
 
 -Check that new task option isn&#39;t the same as current task
