--- a/OBE.html
+++ b/OBE.html
@@ -270,8 +270,7 @@ window.getColor = function(){
 window.random = function(min, max) {
     let num = Math.floor(Math.random() * (max - min)) + min;
     return num;
-}</script><tw-passagedata pid="1" name="Intro" tags="hideFooter" position="225,250" size="100,100">Intro Screen Here
-
+}</script><tw-passagedata pid="1" name="Intro" tags="hideFooter" position="225,250" size="100,100">
 
 
 [[Menu]]</tw-passagedata><tw-passagedata pid="2" name="StoryInit" tags="" position="100,150" size="100,100">/* Initialize Gamewide Variables */
@@ -352,7 +351,9 @@ window.random = function(min, max) {
 
 
 
-</tw-passagedata><tw-passagedata pid="8" name="ToDoList" tags="" position="100,25" size="100,100">- Add check that score is positive to display close button
+</tw-passagedata><tw-passagedata pid="8" name="ToDoList" tags="" position="100,25" size="100,100">Light Blue Background #4BD1DC
+
+- Add check that score is positive to display close button
 
 
 -Check that new task option isn&#39;t the same as current task
@@ -385,7 +386,8 @@ Nice to have:
     - in game direction on which colors post it to click
     - Text at end of game that talks to their score, relates to task quality and how well it was completed
  -Add node to the task objects so that if you want to force a specific vs random next passage you can place it there.  Will need a check to see if its empty and if not use the random one
- </tw-passagedata><tw-passagedata pid="9" name="StoryCaption" tags="" position="100,275" size="100,100">Day $day, $time
+
+</tw-passagedata><tw-passagedata pid="9" name="StoryCaption" tags="" position="100,275" size="100,100">Day $day, $time
 Mood = $mood</tw-passagedata><tw-passagedata pid="10" name="StoryMenu" tags="" position="100,400" size="100,100">[[Menu]]
 &lt;&lt;link &quot;Play Color Code&quot;&gt;&gt;&lt;&lt;= colorCode();&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="11" name="StoryCaption" tags="" position="100,275" size="100,100">OVERCOME BY EVENTS</tw-passagedata><tw-passagedata pid="12" name="StoryMenu" tags="" position="100,400" size="100,100">[[Menu]]
 </tw-passagedata><tw-passagedata pid="13" name="MakeBreakfast" tags="" position="500,75" size="100,100">&lt;&lt;choices&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="TakeOutTrash" tags="" position="500,25" size="100,100">&lt;&lt;choices&gt;&gt;</tw-passagedata><tw-passagedata pid="15" name="Start" tags="" position="350,400" size="100,100">&lt;&lt;nobr&gt;&gt;
