--- a/OBE.html
+++ b/OBE.html
@@ -124,6 +124,14 @@ body {
   color: black;
 }
 
+.title {
+  font-size: 4rem;
+  background: #99D1D8;
+  border: 3px solid white;
+  border-radius: 5px;
+  
+}
+
 .italics {
   font-style: italic;
 }
@@ -270,9 +278,11 @@ window.getColor = function(){
 window.random = function(min, max) {
     let num = Math.floor(Math.random() * (max - min)) + min;
     return num;
-}</script><tw-passagedata pid="1" name="Intro" tags="hideFooter" position="225,250" size="100,100">
-
-
+}</script><tw-passagedata pid="1" name="Intro" tags="hideFooter" position="225,250" size="100,100">&lt;&lt;run UIBar.stow()&gt;&gt;
+&lt;div class=&quot;title&quot;&gt;
+&lt;h1&gt;Overcome By Events&lt;/h1&gt;
+&lt;img src=&quot;media\OBE_title.png&quot; alt=&quot;Overcome By Events Title Image.  A person getting buried by sticky notes.&quot;&gt;
+&lt;/div&gt;
 [[Menu]]</tw-passagedata><tw-passagedata pid="2" name="StoryInit" tags="" position="100,150" size="100,100">/* Initialize Gamewide Variables */
 
 &lt;&lt;set $stress = 50&gt;&gt;
@@ -351,7 +361,13 @@ window.random = function(min, max) {
 
 
 
-</tw-passagedata><tw-passagedata pid="8" name="ToDoList" tags="" position="100,25" size="100,100">Light Blue Background #4BD1DC
+</tw-passagedata><tw-passagedata pid="8" name="ToDoList" tags="" position="100,25" size="100,100">Light Blue Background #99D1D8
+Sticky Colors
+- Blue:  #9DD2D2
+- Green: #BFD8A4
+- Yellow: #F7EC75
+- Pink: #FFD2BD
+- Purple: #C3BBD2
 
 - Add check that score is positive to display close button
 
