--- a/OBE.html
+++ b/OBE.html
@@ -314,6 +314,7 @@ window.random = function(min, max) {
     let num = Math.floor(Math.random() * (max - min)) + min;
     return num;
 }</script><tw-passagedata pid="1" name="Intro" tags="title" position="225,250" size="100,100">&lt;&lt;run UIBar.stow()&gt;&gt;
+&lt;&lt;playlist &quot;obe&quot; play&gt;&gt;
 &lt;div class=&quot;title&quot;&gt;
 &lt;h1&gt;Overcome By Events&lt;/h1&gt;
 &lt;img src=&quot;media\OBE_title_800.png&quot; alt=&quot;Overcome By Events Title Image.  A person getting buried by sticky notes.&quot;&gt;
