--- a/OBE.html
+++ b/OBE.html
@@ -469,10 +469,17 @@ Framework:
           --why using post its
           --click on post it to clear play game and clear it
   
+Hovered:  
+     -change name
      -add resolution text to sticky note completion (possibly in hovered?)   
-  	
-     - (hovered) Add check that score is positive to display close button
-
+     - Add check that score is positive to display close button
+     -Update yellow background color
+     -Update post-it colors and not use yellow
+     -flip squirel randomly
+     - various squirel colors 
+     - various post it note colors
+     - don&#39;t allow clicking off screen 
+     
 Story
       -build out tasks
       -finish memories, add color, italics, etc to fonts to highlight who&#39;s speaking etc
@@ -490,18 +497,14 @@ Bugs
 
 Nice to have:
 	-Mini game
-          -flip squirel randomly
-          - various squirel colors 
-          - various post it note colors
           - in game direction on which colors post it to click
           - Text at end of game that talks to their score, relates to task quality and how 					well it was completed
 
 	 -Add node to the task objects so that if you want to force a specific vs random 			next passage you can place it there.  Will need a check to see if its empty and if 			not use the random one
 
-	-screen darkens or some way to show you are starting to burn out
+	-screen darkens or blurs or some way to show you are starting to burn out
 
 	-add music menu
-    
     -sound effects for memories
     		-change sound
     		-icon memory
