added noFooter tag to story elements

--- a/OBE.html
+++ b/OBE.html
@@ -532,16 +532,16 @@ Mood = $mood</tw-passagedata><tw-passagedata pid="10" name="StoryMenu" tags="" p
 		&lt;&lt;set $conTasks = $taskDB&gt;&gt;        
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
-</tw-passagedata><tw-passagedata pid="14" name="Icon" tags="" position="550,400" size="100,100">Ok, today we are switching from learning about ML to Icon.  Maybe this language will be easier.  I got this.
+</tw-passagedata><tw-passagedata pid="14" name="Icon" tags="noFooter" position="550,400" size="100,100">Ok, today we are switching from learning about ML to Icon.  Maybe this language will be easier.  I got this.
 ...scribbling sound...
 Icon programming language, developed at the University of Arizona by Ralph Griswold...
 Well, that&#39;s neat that I&#39;m studying a language here that was developed here.  I should check what other classes I can take.  I noticed the other day that they offer underwater basket weaving classes at the gym.  I should try to fit the gym in before my last class.  Did I finish all my homework for that class?  
 
 UGH!  I did it again.  Damnit pay attention.
 
-[[Continue|Start]]</tw-passagedata><tw-passagedata pid="15" name="Questions" tags="" position="650,400" size="100,100">I did it again.  I didn&#39;t hear anything he just said for the last 10 minutes.  What was I even thinking about?  I&#39;m so going to fail this class.  I can&#39;t ask the professor a question about it because they will certainly know by my question that I wasn&#39;t paying attention.  What is wrong with me?
+[[Continue|Start]]</tw-passagedata><tw-passagedata pid="15" name="Questions" tags="noFooter" position="650,400" size="100,100">I did it again.  I didn&#39;t hear anything he just said for the last 10 minutes.  What was I even thinking about?  I&#39;m so going to fail this class.  I can&#39;t ask the professor a question about it because they will certainly know by my question that I wasn&#39;t paying attention.  What is wrong with me?
 
-[[Continue|Start]]</tw-passagedata><tw-passagedata pid="16" name="Bus" tags="" position="550,300" size="100,100">Parent:  It&#39;s time to get ready for the bus.  It will be here in 2 min and you need to be outside waiting for it so they aren&#39;t waiting for you...again.
+[[Continue|Start]]</tw-passagedata><tw-passagedata pid="16" name="Bus" tags="noFooter" position="550,300" size="100,100">Parent:  It&#39;s time to get ready for the bus.  It will be here in 2 min and you need to be outside waiting for it so they aren&#39;t waiting for you...again.
 
 ...
 
@@ -555,7 +555,7 @@ Parent:  You&#39;re going to be late for the bus.  If you miss the bus I will ma
 
 Parent:  GET OUTSIDE THE BUS IS HERE!!!
 
-[[Continue|Start]]</tw-passagedata><tw-passagedata pid="17" name="Late" tags="" position="750,400" size="100,100">Ok...I&#39;m ready to go... just have 15 min till I need to leave for the appt.
+[[Continue|Start]]</tw-passagedata><tw-passagedata pid="17" name="Late" tags="noFooter" position="750,400" size="100,100">Ok...I&#39;m ready to go... just have 15 min till I need to leave for the appt.
 I guess I&#39;ll...put away the game I left out...I don&#39;t want the cats dragging the pieces away.
 
 Alright 10 min to go... I can load the dishwasher quick and kick it off...
@@ -564,7 +564,7 @@ Alright 10 min to go... I can load the dishwasher quick and kick it off...
 
 Damnit!  I was supposed to leave 10 min ago.  Where are my keys?
 
-[[Continue|Start]]</tw-passagedata><tw-passagedata pid="18" name="Tires" tags="" position="550,600" size="100,100">...Get&#39;s in the car...
+[[Continue|Start]]</tw-passagedata><tw-passagedata pid="18" name="Tires" tags="noFooter" position="550,600" size="100,100">...Get&#39;s in the car...
 &lt;span class=&quot;italics&quot;&gt;
 Oh! I need to remember to make an appt to change the tires.
 &lt;/span&gt;
@@ -591,7 +591,7 @@ FFS! I need to remember to make an appt to change the tires!
 &lt;/span&gt;
 ...Leaves the car, car ceases to exist...
 
-[[Continue|Start]]</tw-passagedata><tw-passagedata pid="19" name="Whiteboard" tags="" position="650,600" size="100,100">Hey What&#39;s up?
+[[Continue|Start]]</tw-passagedata><tw-passagedata pid="19" name="Whiteboard" tags="noFooter" position="650,600" size="100,100">Hey What&#39;s up?
 
 They want us to implement a new change to this version to include cross WAN replication.  If we override the mapMerge method ....... the timestamp.....then hazelcast will ........ and it will replicate between the primary.....the only problem comes when ................ with the redundant component where......... and if it&#39;s being written to at the same time.  But if we use 
 
@@ -600,9 +600,9 @@ WAIT!!
 ...Grabs dry erase marker...
 Can we start from the beginning so I can draw it?
 
-[[Continue|Start]]</tw-passagedata><tw-passagedata pid="20" name="TurnedOK" tags="" position="750,500" size="100,100">I was worried about you when you were a kid, off in your own world all of the time.  But you seem to have figured things out.
+[[Continue|Start]]</tw-passagedata><tw-passagedata pid="20" name="TurnedOK" tags="noFooter" position="750,500" size="100,100">I was worried about you when you were a kid, off in your own world all of the time.  But you seem to have figured things out.
 
-[[Continue|Start]]</tw-passagedata><tw-passagedata pid="21" name="Siri" tags="" position="550,500" size="100,100">I finally scheduled that doctor&#39;s appt and reaaaally can&#39;t forget it this time.
+[[Continue|Start]]</tw-passagedata><tw-passagedata pid="21" name="Siri" tags="noFooter" position="550,500" size="100,100">I finally scheduled that doctor&#39;s appt and reaaaally can&#39;t forget it this time.
 
 Hey Siri, add doctor appt to the calendar for tomorrow at 10am with a reminder at the time of the event.
 
@@ -618,7 +618,7 @@ Hey Siri, set an alarm for tomorow at 8:00am
 
 And Hey Siri set a 45 minute timer for the banana bread.
 
-[[Continue|Start]]</tw-passagedata><tw-passagedata pid="22" name="Imposter" tags="" position="750,600" size="100,100">I&#39;ve been here three years...is today the day they will figure out that I have no idea what I&#39;m doing?
+[[Continue|Start]]</tw-passagedata><tw-passagedata pid="22" name="Imposter" tags="noFooter" position="750,600" size="100,100">I&#39;ve been here three years...is today the day they will figure out that I have no idea what I&#39;m doing?
 
 [[Continue|Start]]</tw-passagedata><tw-passagedata pid="23" name="choicesWidget" tags="widget" position="375,200" size="100,100">&lt;&lt;widget &quot;choices&quot;&gt;&gt;
 	&lt;&lt;nobr&gt;&gt;
@@ -653,14 +653,14 @@ And Hey Siri set a 45 minute timer for the banana bread.
 		&lt;&lt;/if&gt;&gt;
         &lt;&lt;/nobr&gt;&gt;  
 &lt;&lt;/widget&gt;&gt;
-</tw-passagedata><tw-passagedata pid="24" name="Memories" tags="" position="425,575" size="100,100">&lt;&lt;set $burnoutOptions = [
+</tw-passagedata><tw-passagedata pid="24" name="Memories" tags="noFooter" position="425,575" size="100,100">&lt;&lt;set $burnoutOptions = [
 &quot;You&#39;re over loaded and overwhelmed.  You realized you&#39;re burnt out.  A feeling of despair settles over you.  Why am I so exhausted?  A memory pops into your head...&quot;,
 
 &quot;You feel like a heavy wet blanket has settled over your brain.  Everything feels like it takes so. much. energy.  Why can&#39;t I just get stuff done?  You&#39;re reminded of another time and place...&quot;]&gt;&gt;
 
 &lt;&lt;print either($burnoutOptions)&gt;&gt;
 &lt;&lt;set $memory = $memories.shift()&gt;&gt;
-&lt;&lt;link &quot;Continue&quot; $memory&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="Tired" tags="" position="650,500" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;&lt;link &quot;Continue&quot; $memory&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="Tired" tags="noFooter" position="650,500" size="100,100">&lt;&lt;nobr&gt;&gt;
 Like so many nights before you&#39;re laying in bed trying to fall asleep...
 &lt;span class=&quot;italics&quot;&gt;
 I&#39;m so tired.  I NEED to go to sleep.  Tomorrow, I can&#39;t forget that I have to 
@@ -674,9 +674,7 @@ I mean I guess I don&#39;t mind _tasks[3].text so maybe I&#39;ll do that first. 
 ...
 [[Continue|Start]]
 &lt;/span&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="26" name="cleanUp" tags="" position="300,500" size="100,100">&lt;&lt;=removeTask(&quot;ClickMe&quot;)&gt;&gt;
-&lt;&lt;=removeTask(&quot;StartGame&quot;)&gt;&gt;
-&lt;&lt;goto Start&gt;&gt;</tw-passagedata><tw-passagedata pid="27" name="Reference" tags="" position="200,25" size="100,100">Reference Light Blue Background #99D1D8
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="26" name="Reference" tags="" position="200,25" size="100,100">Reference Light Blue Background #99D1D8
         Sticky Colors
         - Blue:  #9DD2D2
         - Green: #BFD8A4
@@ -684,7 +682,7 @@ I mean I guess I don&#39;t mind _tasks[3].text so maybe I&#39;ll do that first. 
         - Pink: #FFD2BD
         - Purple: #C3BBD2
         Ground color:
-        -blue (for links) #1A547A</tw-passagedata><tw-passagedata pid="28" name="Credits" tags="noFooter" position="300,25" size="100,100">Credits
+        -blue (for links) #1A547A</tw-passagedata><tw-passagedata pid="27" name="Credits" tags="noFooter" position="300,25" size="100,100">Credits
 
 Overcome by Events
 by Autumn and Luke Barker
@@ -704,7 +702,7 @@ Images:
 
 Code Snippets:
 https://webdesign.tutsplus.com/create-a-sticky-note-effect-in-5-easy-steps-with-css3-and-html5--net-13934t 
-</tw-passagedata><tw-passagedata pid="29" name="post-itWidget" tags="widget" position="225,650" size="100,100">&lt;!-- args: task, next passage, onclick event--&gt;
+</tw-passagedata><tw-passagedata pid="28" name="post-itWidget" tags="widget" position="225,650" size="100,100">&lt;!-- args: task, next passage, onclick event--&gt;
 &lt;&lt;widget &quot;post-it&quot;&gt;&gt;
 &lt;&lt;nobr&gt;&gt;
 &lt;ul&gt;
